# model_test_bench

./: .gitignore  DESIGN_GUIDE.md  README.md  TEMPLATE_STRUCTURE.md  env.example  pyproject.toml  pytest.ini
app/: __init__.py  config.py  database.py  main.py
app/api/: corpus.py  evaluation.py  models.py  questions.py
app/models/: __init__.py  schemas.py
app/services/: embedding_service.py  evaluation_service.py  llm_service.py  question_generator.py  reranker_service.py  retrieval_service.py  vector_store_service.py
app/templates/: base.html  corpus.html  dashboard.html  evaluation.html  index.html  models.html  new_evaluation.html  questions.html
app/typing_helpers/: vector_store_protocols.py
data/: evaluation.db
tests/: README.md  conftest.py  test_corpus_api_integration.py  test_corpus_huggingface.py  test_model_catalogue.py
